# nobrainr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
dashboard/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue  main.ts
dashboard/src/api/: client.ts
dashboard/src/components/: AppBar.vue  ChatPanel.vue  EntityBadge.vue  GraphSidePanel.vue  MemoryCard.vue  MemoryDetail.vue
dashboard/src/composables/: useGraph.ts  useMemories.ts  useSSE.ts  useScheduler.ts  useTimeline.ts
dashboard/src/plugins/: vuetify.ts
dashboard/src/router/: index.ts
dashboard/src/stores/: chat.ts  stats.ts
dashboard/src/types/: index.ts
dashboard/src/views/: GraphView.vue  MemoriesView.vue  SchedulerView.vue  TimelineView.vue
docs/: api-reference.md  architecture-vision-2026-03.md  autonomous-learning.md  claude-code-setup.md  client-setup.md  configuration.md  contributing.md  deployment.md  getting-started.md  index.md  mcp-tools.md  nobrainr-architecture.excalidraw
scripts/: post-deploy.sh  setup-client.sh
src/nobrainr/: __init__.py  cli.py  config.py  events.py  layout.py  monitoring.py  scheduler.py  scheduler_jobs.py
src/nobrainr/chat/: prompts.py  rag.py  sanitize.py
src/nobrainr/crawler/: client.py  knowledge.py
src/nobrainr/dashboard/: __init__.py  api.py  app.py  auth.py  routes.py
src/nobrainr/dashboard/static/css/: dashboard.css
src/nobrainr/dashboard/static/js/: graph.js  timeline.js
src/nobrainr/dashboard/templates/: base.html  graph.html  memories.html  timeline.html
src/nobrainr/dashboard/templates/partials/: memory_detail.html  memory_list.html  node_detail.html
src/nobrainr/db/: pool.py  queries.py  schema.py
src/nobrainr/embeddings/: __init__.py  ollama.py
src/nobrainr/extraction/: __init__.py  dedup.py  extractor.py  llm.py  models.py  pipeline.py
src/nobrainr/importers/: __init__.py  chatgpt.py  claude.py  claude_web.py  documents.py  docx_importer.py  github.py  markdown_notes.py  sticky_notes.py  website.py
src/nobrainr/mcp/: server.py
src/nobrainr/services/: chunking.py  code_index.py  communities.py  distill.py  memory.py  query_expansion.py  reranker.py  search_enhancements.py
src/nobrainr/utils/: categories.py
tests/: test_config.py
traefik/: nobrainr.yaml
