[project]
name = "nobrainr"
version = "0.2.0"
description = "Persistent memory and knowledge graph for AI agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["mcp", "ai-memory", "knowledge-graph", "ai-agents", "pgvector", "ollama", "claude-code", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.9.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "numpy>=1.26.0",
    "networkx>=3.0",
    "scipy>=1.12.0",
]

[project.urls]
Repository = "https://github.com/youruser/nobrainr"
Documentation = "https://github.com/youruser/nobrainr#readme"
Issues = "https://github.com/youruser/nobrainr/issues"
Changelog = "https://github.com/youruser/nobrainr/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
nobrainr = "nobrainr.cli:main"
nobrainr-mcp = "nobrainr.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nobrainr"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
